--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fullstack</title>
-    <link rel="stylesheet" href="./global.css">
+    <link rel="stylesheet" href="./Global.css">
 </head>
 
 <body>
     <div id="root">not rendered</div>
-    <script src="./index.js"></script>
+    <script src="./Index.js"></script>
 </body>
 
 </html>
